# Copyright 2021 IRT Saint Exupéry, https://www.irt-saintexupery.com
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License version 3 as published by the Free Software Foundation.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program; if not, write to the Free Software Foundation,
# Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
# Contributors:
#    INITIAL AUTHORS - initial API and implementation and/or initial
#                         documentation
#        :author: Francois Gallard
#    OTHER AUTHORS   - MACROSCOPIC CHANGES
"""Driver library tests."""

from __future__ import annotations

import logging
from typing import TYPE_CHECKING
from typing import ClassVar
from unittest import mock

import pytest
from numpy import array
from numpy import full

from gemseo import configuration
from gemseo import execute_algo
from gemseo.core.algorithm import base_driver_library
from gemseo.core.algorithm._progress_bar.standard import ProgressBar
from gemseo.core.algorithm.base_driver_library import BaseDriverLibrary
from gemseo.core.function.array_function import ArrayFunction
from gemseo.core.function.collection.functions import Functions
from gemseo.doe.custom_doe.custom_doe import CustomDOE
from gemseo.doe.custom_doe.settings.custom_doe_settings import CustomDOE_Settings
from gemseo.doe.scipy.scipy_doe import SciPyDOE
from gemseo.doe.scipy.settings.mc import MC_Settings
from gemseo.optimization.factory import OPTIMIZATION_LIBRARY_FACTORY
from gemseo.optimization.problem import OptimizationProblem
from gemseo.optimization.scipy_local.scipy_local import ScipyOpt
from gemseo.optimization.scipy_local.settings.slsqp import SLSQP_Settings
from gemseo.problem.optimization.power_2 import Power2
from gemseo.problem.optimization.rosenbrock import Rosenbrock
from gemseo.space.design import DesignSpace
from gemseo.space.util import get_value_and_bounds
from gemseo.util.pydantic import create_model
from gemseo.util.testing.helper import assert_exception
from gemseo.util.testing.helper import concretize_classes

if TYPE_CHECKING:
    from gemseo.core.algorithm.base_driver_library import DriverDescription


@pytest.fixture(scope="module")
def power_2() -> Power2:
    """The power-2 problem."""
    problem = Power2()
    problem.database.store(
        array([0.79499653, 0.20792012, 0.96630481]),
        {"pow2": 1.61, "ineq1": -0.0024533, "ineq2": -0.0024533, "eq": -0.00228228},
    )
    return problem


class MyDriver(BaseDriverLibrary):
    ALGORITHM_INFOS: ClassVar[dict[str, DriverDescription]] = {"algo_name": None}

    def __init__(self, algo_name: str = "algo_name") -> None:
        super().__init__(algo_name)


@pytest.fixture(scope="module")
def optimization_problem():
    """A mock optimization problem."""
    design_space = mock.Mock()
    design_space.dimension = 2
    problem = mock.Mock()
    problem.dimension = 2
    problem.design_space = design_space
    problem.functions = Functions()
    return problem


def test_empty_design_space(snapshot) -> None:
    """Check that a driver cannot be executed with an empty design space."""
    with concretize_classes(MyDriver):
        driver = MyDriver()
    driver._algo_name = "algo_name"
    with assert_exception(ValueError, snapshot):
        driver._check_algorithm(OptimizationProblem(DesignSpace()))


def test_no_functions(optimization_problem, snapshot):
    """Check that an error is raised when the problem has no function."""
    lib = ScipyOpt("SLSQP")
    with assert_exception(ValueError, snapshot):
        lib.execute(optimization_problem)


@pytest.mark.parametrize("enable_progress_bar", [False, True])
@pytest.mark.parametrize("enable_logging", [False, True])
def test_progress_bar(enable_progress_bar, enable_logging, caplog) -> None:
    """Check the activation of the progress bar from the options of a
    BaseDriverLibrary."""
    enable = configuration.logging.enable
    configuration.logging.enable = enable_logging
    driver = OPTIMIZATION_LIBRARY_FACTORY.create("SLSQP")
    driver.execute(
        Power2(), settings=SLSQP_Settings(enable_progress_bar=enable_progress_bar)
    )
    use_progress_bar = enable_logging and enable_progress_bar
    assert isinstance(driver._progress_bar, ProgressBar) is use_progress_bar
    assert (
        "gemseo.core.algorithm._progress_bar.custom:custom.py:" in caplog.text
    ) is use_progress_bar
    configuration.logging.enable = enable


@pytest.mark.parametrize(
    ("kwargs", "expected"), [({}, "    50%|"), ({"message": "foo"}, "foo  50%|")]
)
@pytest.mark.parametrize("parallelize", [False, True])
def test_new_iteration_callback_xvect(caplog, kwargs, expected, parallelize) -> None:
    """Test the new iteration callback."""
    power_2 = Power2()
    test_driver = ScipyOpt("SLSQP")
    test_driver._problem = power_2
    test_driver._settings = create_model(
        test_driver.ALGORITHM_INFOS[test_driver.algo_name].settings_class
    )
    test_driver._settings.max_time = 0
    test_driver._init_iter_observer(power_2, max_iter=2, **kwargs)
    test_driver._problem.preprocess_functions(is_function_input_normalized=False)
    for function in test_driver._problem.functions:
        function.pre_compute_at_new_point = (
            test_driver._finalize_previous_iteration_using_database
        )
    test_driver._problem.evaluate_functions(
        array([0.0, 0.0, 0.0]),
        design_vector_is_normalized=False,
        preprocess_design_vector=False,
    )
    test_driver._problem.evaluate_functions(
        array([1.0, 0.0, 0.0]),
        design_vector_is_normalized=False,
        preprocess_design_vector=False,
    )
    assert expected in caplog.text


@pytest.fixture
def driver_library() -> BaseDriverLibrary:
    """A driver library."""
    driver_library = ScipyOpt("SLSQP")
    design_space = DesignSpace()
    design_space.add_variable("x", 1, "float", -2, 3, 1)
    driver_library._problem = OptimizationProblem(design_space)
    return driver_library


@pytest.mark.parametrize(
    ("as_dict", "x0", "lower_bounds", "upper_bounds"),
    [(False, 0.6, 0, 1), (True, {"x": 0.6}, {"x": 0}, {"x": 1})],
)
def test_get_value_and_bounds_vects_normalized_as_ndarrays(
    driver_library, as_dict, x0, lower_bounds, upper_bounds
) -> None:
    """Check the getting of the normalized initial values and bounds."""
    assert get_value_and_bounds(
        driver_library._problem.design_space, True, as_dict=as_dict
    ) == (
        pytest.approx(x0),
        lower_bounds,
        upper_bounds,
    )


@pytest.mark.parametrize(
    ("as_dict", "x0", "lower_bounds", "upper_bounds"),
    [(False, 1, -2, 3), (True, {"x": 1}, {"x": -2}, {"x": 3})],
)
def test_get_value_and_bounds_vects_non_normalized(
    driver_library, as_dict, x0, lower_bounds, upper_bounds
) -> None:
    """Check the getting of the non-normalized initial values and bounds."""
    assert get_value_and_bounds(
        driver_library._problem.design_space, False, as_dict=as_dict
    ) == (
        x0,
        lower_bounds,
        upper_bounds,
    )


@pytest.mark.parametrize("name", ["new_iter_listener", "store_listener"])
def test_clear_listeners(name):
    """Check clear_listeners."""
    problem = Power2()
    getattr(problem.database, f"add_{name}")(sum)
    driver = CustomDOE()
    driver.execute(
        problem, settings=CustomDOE_Settings(samples=array([[-0.5, 0.0, 0.5]]))
    )
    assert getattr(problem.database, f"_Database__{name}s") == [sum]


@pytest.mark.parametrize("max_dimension", [1, 3])
def test_max_design_space_dimension_to_log(max_dimension, caplog):
    """Check the cap on the dimension of a design space to log."""
    problem = Power2()
    initial_space_string = problem.design_space._get_string_representation(
        False, "   over the design space"
    ).replace("\n", "\n      ")
    CustomDOE().execute(
        problem,
        settings=CustomDOE_Settings(
            samples=full((1, 3), pow(0.9, 1.0 / 3.0)),
            max_design_space_dimension_to_log=max_dimension,
        ),
    )

    # Check the logging of the initial design space
    assert (max_dimension >= 3) == (
        (
            "gemseo.core.algorithm.base_driver_library",
            logging.INFO,
            initial_space_string,
        )
        in caplog.record_tuples
    )

    # Check the logging of the final design space
    assert (max_dimension >= 3) == (
        (
            "gemseo.core.algorithm.base_driver_library",
            logging.INFO,
            problem.design_space
            ._get_string_representation(False)
            .replace("Design space", "      Design space")
            .replace("\n", "\n         "),
        )
        in caplog.record_tuples
    )


class MockedTime:
    """Mock time, returning 0 at first call, 10 at second call and 10 at other calls."""

    def __init__(self):
        self.n_calls = 0

    def __call__(self, *args, **kwargs):
        self.n_calls += 1
        if self.n_calls in [1, 2]:
            return 0.0

        return 10


def test_reaching_max_time_does_not_stop_storing():
    """Check that reaching maximum time does not stop storing in the database."""
    problem = Rosenbrock()
    problem.add_constraint(
        ArrayFunction(sum, name="sum"), constraint_type=ArrayFunction.ConstraintType.EQ
    )
    n_samples = 100
    with mock.patch.object(base_driver_library, "time", MockedTime()):
        SciPyDOE("MC").execute(
            problem, settings=MC_Settings(n_samples=n_samples, max_time=1)
        )

    # Reaching maximum time stops iterating.
    assert len(problem.database) < n_samples
    # Reaching maximum time does not stop storing in the database.
    assert len(problem.database.last_item) == 2


class G:
    def __init__(self):
        self.value = 1.0

    def __call__(self, x):
        self.value *= -1
        return self.value


@pytest.mark.parametrize("use_database", [True, False])
@pytest.mark.parametrize("n_processes", [1, 2])
def test_progress_bar_database_n_processes(caplog, use_database, n_processes):
    """Check that the progress bar is logged w/wo parallelization and w/wo database."""
    problem = Rosenbrock()
    problem.add_constraint(
        ArrayFunction(G(), name="g"),
        value=1.0,
        constraint_type=problem.ConstraintType.EQ,
    )
    execute_algo(
        problem,
        "doe",
        settings_model=MC_Settings(
            n_samples=3, n_processes=n_processes, use_database=use_database
        ),
    )
    assert "33%" in caplog.text
    assert ("obj=325" in caplog.text) is use_database
    assert "67%" in caplog.text
    assert ("obj=11.2" in caplog.text) is use_database
    assert "100%" in caplog.text
    assert ("obj=79.3" in caplog.text) is use_database
